--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,25 +2,43 @@
 #
 # This project is dual licensed under MIT and Apache.
 
-[package]
-name = "atklib"
+[workspace]
+resolver = "2"
+members = ["core", "modules/*"]
+
+[workspace.package]
 version = "0.0.0"
 edition = "2024"
 license = "MIT OR Apache-2.0"
 
+[package]
+name = "aku"
+version.workspace = true
+edition.workspace = true
+license.workspace = true
+
 [features]
-postgres = ["dep:sqlx", "dep:sea-query", "dep:sea-query-binder", "dep:tokio"]
+cron = ["dep:aku_cron"]
+axum = ["dep:aku_axum"]
+postgres = ["dep:aku_postgres"]
 
 [dependencies]
+aku_core = { workspace = true }
+aku_axum = { workspace = true, optional = true }
+aku_cron = { workspace = true, optional = true }
+aku_postgres = { workspace = true, optional = true }
+
+[workspace.dependencies]
+aku_core.path = "core"
+aku_axum.path = "modules/axum"
+aku_cron.path = "modules/cron"
+aku_postgres.path = "modules/postgres"
+
 paste = "^1.0"
 extend = "^1.2"
-# Postgres
-sqlx = { version = "^0.8", optional = true, features = [
-  "runtime-tokio",
-  "postgres",
-] }
-sea-query = { version = "^0.32", optional = true }
-sea-query-binder = { version = "^0.7", optional = true, features = [
-  "sqlx-postgres",
-] }
-tokio = { version = "^1.45", optional = true }
+sqlx = { version = "^0.8", features = ["runtime-tokio", "postgres"] }
+sea-query = "^0.32"
+sea-query-binder = { version = "^0.7", features = ["sqlx-postgres"] }
+tokio = "^1.48"
+tokio-cron-scheduler = "^0.15"
+futures = "^0.3"
