--- a/modules/poise/Cargo.toml
+++ b/modules/poise/Cargo.toml
@@ -8,6 +8,10 @@ version.workspace = true
 edition.workspace = true
 license.workspace = true
 
+[features]
+postgres = ["dep:sqlx"]
+
 [dependencies]
 aku_core.workspace = true
 poise.workspace = true
+sqlx = { workspace = true, optional = true }
