--- a/modules/poise/Cargo.toml
+++ b/modules/poise/Cargo.toml
@@ -15,3 +15,4 @@ postgres = ["dep:sqlx"]
 aku_core.workspace = true
 poise.workspace = true
 sqlx = { workspace = true, optional = true }
+sea-query = { workspace = true, optional = true }
